--- a/my-weight/src/styles.css
+++ b/my-weight/src/styles.css
@@ -1,1 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style-type: none;
+    box-sizing: border-box;
+}
+
+:root {
+    --background-blue100-color: #1e00b9;
+    --background-blue200-color: #180098;
+    --background-blue300-color: #120077;
+    --background-blue400-color: #0c0054;
+    --background-black-color: black;
+
+    --text-white100-color: white;
+    --text-white200-color: #d2d2d2;
+    --text-white300-color: #a8a7a7;
+
+    --button-primary-before: #0dff00;
+    --button-primary-after: #079300;
+}
+
+
+body {
+    color: var(--text-white100-color);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+.flex-row {
+    flex-direction: row;
+}
+.align-items-center {
+    align-items: center;
+}
+
+.justify-content-space-between {
+    justify-content: space-between;
+}
+
+
