I am currently working on the header of the page. Will need find image to fill in the main-header.

--- a/my-weight/src/app/features/dashboard/dashboard.component.html
+++ b/my-weight/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<global-header></global-header>
+<header global-header ></header>
 <main>
-    <main-header></main-header>
+    <header main-header></header>
 </main>
 <global-footer></global-footer>
