--- a/my-weight/src/app/shared/components/global-header/global-header.component.html
+++ b/my-weight/src/app/shared/components/global-header/global-header.component.html
@@ -1,19 +1,15 @@
-<header class="global-header">
-    <div class="container flex flex-row align-items-center justify-content-space-between">
-        <h1>
-            <a href="">
-                <img
-                class="logo" src="my-weight.svg" alt="The 'My Weight' logo.">
-            </a>
-        </h1>
+<div class="container">
+    <h1 class="logo-container">
+        <a class="logo-link" href="">
+            <img class="logo" src="/my-weight.svg" alt="My Weight logo">
+        </a>
+    </h1>
 
-        <nav>
-            <ul class=".flex .flex-row .align-items-center">
-                
-                <li>
-                    <a class="link-btn" href="/weight/entry">Weight Entry</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <nav class="global-nav">
+        <ul class="global-nav-list">
+            <li class="global-nav-list-item">
+                <a link-btn class="primary-btn" href="#">Enter New Weight</a>
+            </li>
+        </ul>
+    </nav>
+</div>
