--- a/my-weight/src/styles.css
+++ b/my-weight/src/styles.css
@@ -24,31 +24,24 @@
 
 
 body {
-    color: var(--text-white100-color);
+    /* color: var(--text-white100-color); */
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 
 .container {
     max-width: 800px;
     margin: 0 auto;
 }
-
-.flex {
-    display: flex;
+.primary-btn {
+    background-color: var(--button-primary-before);
+    color: black;
+    text-shadow: 0px 2px 2px white;
 }
 
-.flex-column {
-    flex-direction: column;
+.primary-btn:hover {
+    background-color: var(--button-primary-after);
+    color: white;
+    text-shadow: 0px 2px 2px black;
 }
-.flex-row {
-    flex-direction: row;
-}
-.align-items-center {
-    align-items: center;
-}
-
-.justify-content-space-between {
-    justify-content: space-between;
-}
-
-
