--- a/my-weight/src/app/shared/components/main-header/main-header.component.css
+++ b/my-weight/src/app/shared/components/main-header/main-header.component.css
@@ -1,7 +1,7 @@
 :host {
     background-color: var(--background-blue100-color);
     border-radius: 0 0 3em 3em;
-    height: 300px;
+    /* height: 300px; */
     padding-bottom: 20px;
 }
 
