--- a/my-weight/src/app/shared/components/main-header/main-header.component.html
+++ b/my-weight/src/app/shared/components/main-header/main-header.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <h1>
-        Track your weight and reach your goal.
+    <h1 class="Heading">
+        New Weight Entry
     </h1>
     <div class="box">
-        
+
     </div>
 </div>
