Learning a little bit about @Input. I am still working on the dashboard for the app. Will continue tommorrow

--- a/my-weight/src/app/features/dashboard/dashboard.component.html
+++ b/my-weight/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
 <header global-header ></header>
 <main>
-    <header main-header></header>
+    <header main-header ></header>
+    <section summary [title]="'Hello Marco this is your overall stats'">
+        <stats></stats>
+    </section>
 </main>
 <global-footer></global-footer>
