--- a/my-weight/src/styles.css
+++ b/my-weight/src/styles.css
@@ -24,15 +24,25 @@
 
 
 body {
-    /* color: var(--text-white100-color); */
-    color: black;
+    color: var(--text-white100-color);
     font-family: Arial, Helvetica, sans-serif;
 }
-
-
+h2 {
+    margin-bottom: 2em;
+}
+.m-top-50{
+    margin-top: 50px;
+}
 .container {
     max-width: 800px;
     margin: 0 auto;
+}
+.flex-container {
+    display: flex;
+}
+main > section {
+    border-radius: 3em;
+    padding: 3em;
 }
 .primary-btn {
     background-color: var(--button-primary-before);
